# portkey

./: Cargo.toml  README.md  build.rs
docker/product-service/: Dockerfile  index.js  package.json  schema.graphql
docker/user-service/: Dockerfile  index.js  package.json  schema.graphql
schemas/: service_1.graphql  service_2.graphql  supergraph.yaml
src/: federation_gateway.rs  lib.rs  main.rs  query_executor.rs  query_planner.rs  schema_registry.rs  supergraph.yaml
tests/: integration_test.rs
