[package]
name = "portkey"
version = "0.1.0"
edition = "2024"
authors = ["Alvaro Tolentino <alvarotolentinou@gmail.com>"]
license = "GPL-3.0"
description = "A graphql federate gateway service for Rust"
readme = "README.md"
homepage = "https://github.com/alvarotolentino/portkey"

build = "build.rs"

[dependencies]
# Async runtime
async-trait = "0.1"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# HTTP server components (updated versions)
hyper = { version = "1.6.0", features = ["full", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.3.1"
http-body-util = "0.1"
bytes = "1.4"
reqwest = { version = "0.12.15", features = ["json"] }

# GraphQL parser
graphql-parser = "0.4.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
testcontainers = "0.24.0"
serial_test = "2.0"
pretty_assertions = "1.3"
